manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-axion
  namespace: axion-app
  labels:
    app.kubernetes.io/name: myingress
  annotations:
    appgw.ingress.kubernetes.io/health-probe-path: ""
    appgw.ingress.kubernetes.io/cookie-based-affinity: "false"
    appgw.ingress.kubernetes.io/ssl-redirect: "false"  
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: pgadmin.bhawani.shop
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80
    - host: ingest.bhawani.shop
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ingestion-service
                port:
                  number: 80              
    - host: query.bhawani.shop
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: query-service
                port:
                  number: 80
